[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = {version="0.12.1", features=["markdown"]}
axum = {version= "0.6.20", features = ["headers"]}
sqlx = {version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "macros", "time"]} 
tokio = {version="1.34.0", features = ["macros", "rt-multi-thread"]}
tower-http = {version = "0.5", features=["full"]}

[[bin]]
name = "blog-rs"
path = "src/main.rs"

[[bin]]
name = "markd"
path = "src/bin/markd.rs"

